# crabby-vpn

./: Cargo.toml  Makefile  Readme.md  shell.nix  start-clnt  start-srvr
src/: cli.yml  main.rs
src/client/: mod.rs
src/crypto/: mod.rs
src/server/: mod.rs
