[package]
name = "crabby-vpn"
version = "0.1.0"
authors = ["ty <ty@notarealemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6"
block-modes = "0.7"
base64 = "0.13"
clap = { version = "2", features = ["yaml"] }
hex-literal = "0.3"
rand_core = "0.5"
sha2 = "0.9"
x25519-dalek = "1.1"
